--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
-          cache: 'npm'
+          node-version: "22"
+          cache: "npm"
 
       - name: Install Node Dependencies
         run: npm i
@@ -47,8 +47,31 @@ jobs:
       - name: Generate Application Key
         run: php artisan key:generate
 
+      # ---------------------------------
+      # ADD THIS PART TO FIX THE GITHUB TEST (LARAVEL HERD)
+      # Add these new steps after 'Generate Application Key'
+      - name: Create Database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
+
+      - name: Run Migrations
+        run: php artisan migrate --env=testing --force --database=sqlite
+        env:
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
+
+        # ---------------------------------
+
       - name: Build Assets
         run: npm run build
 
       - name: Run Tests
-        run: ./vendor/bin/pest
+        run:
+          ./vendor/bin/pest
+
+          # ADD THIS PART TO FIX THE GITHUB TEST (LARAVEL HERD)
+        env:
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
+          # ---------------------------------
